Fix magnifying glass alignment - closes #124

--- a/app/styles/views/directory.styl
+++ b/app/styles/views/directory.styl
@@ -54,9 +54,8 @@ body.directory
     height input-height
     color textColorDark
     font-size 1.25rem
-    margin-left -70px
+    margin-left -58px
     padding-left 70px
-    float right
 
     &:focus
       box-shadow none
